--- a/examples/single/index.html
+++ b/examples/single/index.html
@@ -14,9 +14,9 @@
     <script src="https://unpkg.com/drumie@latest/dist/drumie.js"></script>
 
     <script>
-        const connectionString = "ws://norsetreasure.test/connect"
+        const connectionString = "wss://***.com/connect"
         var connectionToken
-        const apiPrefix = "http://norsetreasure.test/api"
+        const apiPrefix = "https://***.com/api"
         const getConnectToken = (channel) => {
             return async () => {
                 try {
