--- a/examples/single/index.html
+++ b/examples/single/index.html
@@ -17,10 +17,10 @@
         const connectionString = "wss://***.com/connect"
         var connectionToken
         const apiPrefix = "https://***.com/api"
-        const getConnectToken = (channel) => {
+        const getConnectionToken = (channel) => {
             return async () => {
                 try {
-                    const res = await fetch(`${apiPrefix}/connect-token`, {
+                    const res = await fetch(`${apiPrefix}/auth/connection-token`, {
                         method: "POST",
                         headers: {
                             "Content-Type": "application/json",
@@ -48,10 +48,10 @@
                 }
             }
         }
-        const getSubscribeToken = (channel) => {
+        const getSubscriptionToken = (channel) => {
             return async () => {
                 try {
-                    const res = await fetch(`${apiPrefix}/subscribe-token`, {
+                    const res = await fetch(`${apiPrefix}/auth/subscription-token`, {
                         method: "POST",
                         headers: {
                             "Content-Type": "application/json",
@@ -77,7 +77,7 @@
         const channels = [
             {
                 name: "customer",
-                token: getSubscribeToken("customer"),
+                token: getSubscriptionToken("customer"),
                 callbacks: {
                     subscribing: (ctx) => console.log("subscribing to customer", ctx),
                     subscribed: (ctx) => console.log("Subscribed to customer", ctx),
@@ -88,7 +88,7 @@
             },
             {
                 name: "nice",
-                token: getSubscribeToken("nice"),
+                token: getSubscriptionToken("nice"),
                 callbacks: {
                     subscribing: (ctx) => console.log("subscribing to nice", ctx),
                     subscribed: (ctx) => console.log("Subscribed to nice", ctx),
@@ -104,7 +104,7 @@
             connecting: (ctx) => console.log(`connecting: ${ctx.code}, ${ctx.reason}`),
             connected: (ctx) => console.log(`connected over ${ctx.transport}`),
             disconnected: (ctx) => console.log(`disconnected: ${ctx.code}, ${ctx.reason}`),
-            token: getConnectToken("*"),
+            token: getConnectionToken("*"),
         }, channels);
 
         drumie.subscribe()
